# DeliverEase

./: .coverage  .gitignore  .htmlhintrc  .stylelintrc.json  CODE_OF_CONDUCT.md  Contributing.md  LICENSE  README.md  SECURITY.md  Status.md  app.py  contribute.md  db.sqlite3  main.py  manage.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt  setup.cfg  test.py  test2.py  test_pages.py  testdb.py  testing.py  todolist.txt
DeliverEase/: asgi.py  settings.py  urls.py  wsgi.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
_hooks/: commit-msg  hooks_setup  pre-commit
buyer/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
docs/: DeliverEase.rst  buyer.migrations.rst  buyer.rst  conf.py  index.rst  main.rst  manage.rst  modules.rst  seller.migrations.rst  seller.rst  userAuth.migrations.rst  userAuth.rst
git_hooks/: pre-commit
hooks/: commit-msg  pre-commit
htmlcov/: d_15c4a824ab2728a3___init___py.html  d_15c4a824ab2728a3_admin_py.html  d_15c4a824ab2728a3_apps_py.html  d_15c4a824ab2728a3_models_py.html  d_15c4a824ab2728a3_tests_py.html  d_15c4a824ab2728a3_urls_py.html  d_15c4a824ab2728a3_views_py.html  d_5e003c69d09aae72___init___py.html  d_5e003c69d09aae72_admin_py.html  d_5e003c69d09aae72_apps_py.html  d_5e003c69d09aae72_models_py.html  d_5e003c69d09aae72_tests_py.html  d_5e003c69d09aae72_urls_py.html  d_5e003c69d09aae72_views_py.html  d_7b3a98caf36633c7___init___py.html  d_7b3a98caf36633c7_admin_py.html  d_7b3a98caf36633c7_apps_py.html  d_7b3a98caf36633c7_models_py.html  index.html  status.json  (+16 more)
(+203 files in other folders)
