[tool.poetry]
name = "deliverease"
version = "0.1.0"
description = ""
authors = ["Aryan Gupta <aryangupta07075@gmail.com>", "Atrika Show <readeratrika08@gmail.com>", "Siddhant Kumar <siddhantkumar.xyz@gmail.com>", "Devansh Singh Parmar <devansh18dp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
sqlparse = "^0.4.4"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
