
## run poetry install to install the dependencies listed in the file
[tool.poetry]
name = "DeliverEase"
version = "0.1.0"
description = ""
authors = ["CodeArena"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
sqlparse = "^0.4.4"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
match = "(?!__init__|000).*.py"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module ="DeliverEase.settings"
strict_settings = true
